--- a/mode-settings/docker-settings.org
+++ b/mode-settings/docker-settings.org
@@ -1,5 +1,5 @@
-#+title: Docker Configuration
-#+author: Johnny Sigman
+* Docker
+
 
 #+BEGIN_SRC elisp :load yes
 ;; (use-package docker :straight t)
