--- a/mode-settings/global-keybindings.org
+++ b/mode-settings/global-keybindings.org
@@ -1,4 +1,5 @@
 * Global Keybindings
+#+PROPERTY: header-args:elisp :load yes
 
 #+BEGIN_SRC elisp :load yes
 ;-------------CUSTOM KEYBINDINGS-----------;
