--- a/mode-settings/lsp-settings.org
+++ b/mode-settings/lsp-settings.org
@@ -1,4 +1,5 @@
 * Language Server Protocol (LSP)
+#+PROPERTY: header-args:elisp :load yes
 
 #+BEGIN_SRC elisp :load yes
 (setq my/lsp-package "lsp")
