--- a/mode-settings/multiple-cursors-settings.org
+++ b/mode-settings/multiple-cursors-settings.org
@@ -1,4 +1,5 @@
 * Multiple Cursors (MC)
+#+PROPERTY: header-args:elisp :load yes
 
 #+BEGIN_SRC elisp :load yes
 (straight-use-package 'multiple-cursors)
